tests/errors/2006-13.vb
'#compiler-options:/optioncompare:
'#compiler-message:Command line error BC2006 : option 'optioncompare' requires ':binary|text'
'#exit-code:1